Fix checkbox in dark mode

--- a/assets/css/element-ui-var.css
+++ b/assets/css/element-ui-var.css
@@ -132,7 +132,7 @@ a:hover {
     font-size: initial;
 }
 
-.el-form-item__label {
+.el-form-item__label, .el-checkbox {
     color: var(--text-color);
 }
 
